umap/static/umap/map.css
/* ... */
.leaflet-popup-content {
    min-width: 100px;
    line-height: inherit;
}
.leaflet-popup-content-wrapper, .leaflet-popup-tip {
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.4);
}
.leaflet-popup-content-wrapper {
    border-radius: 4px;
}
.umap-popup-content {
    max-height: 500px;
    flex-grow: 1;
    margin-bottom: 4px;
    display: flex;
    flex-direction: column;
}
.umap-popup-content iframe {
    min-width: 310px;
}
.umap-popup-content th,
.umap-popup-content td {
    word-break: break-word;
}
.umap-popup-container {
    flex-grow: 1;
    padding: 0 10px;
    word-break: break-word;
}
.leaflet-popup-content h3 {
    margin-bottom: 0;
}
.leaflet-control-toolbar,
.leaflet-bar {
    box-shadow: none;
}
.marker-cluster {
    background-color: white;
    width: 40px;
    height: 40px;
}
.leaflet-contextmenu-icon {
    display: none;
}
.umap-popup-large iframe,
.umap-popup-large img {
    /* See https://github.com/Leaflet/Leaflet/commit/61d746818b99d362108545c151a27f09d60960ee#commitcomment-6061847 */
    max-width: 500px !important;
}
.umap-popup-content img {
    max-width: 100%;
}
.umap-georss-link .popup-title {
    text-align: center;
}
.leaflet-inplace-toolbar {
  z-index: 10000!important;
}
.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
    border-width: 1px;
}
.leaflet-touch .leaflet-bar a {
    width: 36px;
    height: 36px;
    line-height: 36px;
}

/* *********** */
/* Geolocation */
/* *********** */
.geolocated {
    width: 16px !important;
    height: 16px!important;
    background-color: #3388ff;
    border: 1px solid white;
    border-radius: 8px;
    box-shadow: 1px 5px 5px black;
}

/* ****** */
/* Mobile */
/* ****** */

@media all and (max-width: 480px) {

    .leaflet-control-layers-expanded label {
        display: inline-block;
        margin-right: 10px;
    }

    .leaflet-control-layers-expanded {
        margin-left: 10px;
    }
}

/* ****** */
/* Print  */
/* ****** */

@media print {

    .leaflet-control-container {
        display: none;
    }
}

